--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,4 @@
 ---
-
 # Copyright 2024 Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,7 +14,7 @@
 # limitations under the License.
 
 - name: include default variables
-  ansible.builtin.include_vars: "../vars/main.yml"
+  ansible.builtin.include_vars: ../vars/main.yml
 
 - name: include release specific variables
   ansible.builtin.include_vars: "{{ _loop_var }}"
@@ -32,7 +31,7 @@
         - "{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version | lower }}.yml"
         - "{{ ansible_os_family | lower }}.yml"
       paths:
-        - "../vars"
+        - ../vars
       skip: true
 
 - name: include release specific tasks
@@ -50,7 +49,7 @@
         - "{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version | lower }}.yml"
         - "{{ ansible_os_family | lower }}.yml"
       paths:
-        - "."
+        - .
       skip: true
 
 - name: prepare directories
@@ -61,8 +60,8 @@
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
   loop:
-    - { dest: "/etc/default" }
-    - { dest: "/var/lib/etcd" }
+    - { dest: /etc/default }
+    - { dest: /var/lib/etcd }
     - { dest: "{{ etcd_cert_file | dirname }}" }
     - { dest: "{{ etcd_key_file | dirname }}" }
     - { dest: "{{ etcd_peer_cert_file | dirname }}" }
@@ -78,7 +77,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
   loop:
-    - { dest: "/etc/default/etcd" }
+    - { dest: /etc/default/etcd }
   notify:
     - etcd | systemctl daemon-reload
     - etcd | systemctl restart etcd.service
@@ -91,17 +90,17 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   loop:
-    - { dest: "/etc/default/etcd" }
-    - { dest: "/etc/systemd/system/etcd.service", state: "absent" }
+    - { dest: /etc/default/etcd }
+    - { dest: /etc/systemd/system/etcd.service, state: absent }
   notify:
     - etcd | systemctl daemon-reload
     - etcd | systemctl restart etcd.service
 
 - name: generate /etc/etcd/pki/ca.key
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.openssl_privatekey:
     path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
   when: inventory_hostname == ansible_play_hosts[0]
@@ -111,16 +110,16 @@
 
 - name: generate /etc/etcd/pki/ca.csr
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.openssl_csr:
     path: "{{ etcd_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
     common_name: "{{ ansible_play_hosts[0] }}"
     subject:
       CN: "{{ ansible_play_hosts[0] }}"
-    basic_constraints: "CA:TRUE"
+    basic_constraints: CA:TRUE
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
@@ -128,14 +127,14 @@
 
 - name: generate /etc/etcd/pki/ca.crt
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.x509_certificate:
     path: "{{ etcd_trusted_ca_file }}"
     csr_path: "{{ etcd_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
-    provider: "selfsigned"
+    provider: selfsigned
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
@@ -143,9 +142,9 @@
 
 - name: generate /etc/etcd/pki/server.key
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.openssl_privatekey:
     path: "{{ etcd_key_file }}"
   when: inventory_hostname == ansible_play_hosts[0]
@@ -155,9 +154,9 @@
 
 - name: generate /etc/etcd/pki/server.csr
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.openssl_csr:
     path: "{{ etcd_cert_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_key_file }}"
@@ -172,7 +171,7 @@
     extended_key_usage:
       - clientAuth
       - serverAuth
-    basic_constraints: "CA:FALSE"
+    basic_constraints: CA:FALSE
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
@@ -181,16 +180,16 @@
 
 - name: generate /etc/etcd/pki/server.crt
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.x509_certificate:
     path: "{{ etcd_cert_file }}"
     csr_path: "{{ etcd_cert_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_key_file }}"
     ownca_path: "{{ etcd_trusted_ca_file }}"
     ownca_privatekey_path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
-    provider: "ownca"
+    provider: ownca
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
@@ -198,9 +197,9 @@
 
 - name: generate /etc/etcd/pki/ca.key
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.openssl_privatekey:
     path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
   when: inventory_hostname == ansible_play_hosts[0]
@@ -210,16 +209,16 @@
 
 - name: generate /etc/etcd/pki/ca.csr
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.openssl_csr:
     path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
     common_name: "{{ ansible_play_hosts[0] }}"
     subject:
       CN: "{{ ansible_play_hosts[0] }}"
-    basic_constraints: "CA:TRUE"
+    basic_constraints: CA:TRUE
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
@@ -227,14 +226,14 @@
 
 - name: generate /etc/etcd/pki/ca.crt
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.x509_certificate:
     path: "{{ etcd_peer_trusted_ca_file }}"
     csr_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
-    provider: "selfsigned"
+    provider: selfsigned
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
@@ -242,9 +241,9 @@
 
 - name: generate /etc/etcd/pki/peer.key
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.openssl_privatekey:
     path: "{{ etcd_peer_key_file }}"
   when: inventory_hostname == ansible_play_hosts[0]
@@ -254,9 +253,9 @@
 
 - name: generate /etc/etcd/pki/peer.csr
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.openssl_csr:
     path: "{{ etcd_peer_cert_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_key_file }}"
@@ -271,7 +270,7 @@
     extended_key_usage:
       - clientAuth
       - serverAuth
-    basic_constraints: "CA:FALSE"
+    basic_constraints: CA:FALSE
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
@@ -280,16 +279,16 @@
 
 - name: generate /etc/etcd/pki/peer.crt
   environment:
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   vars:
-    ansible_python_interpreter: "python3"
+    ansible_python_interpreter: python3
   community.crypto.x509_certificate:
     path: "{{ etcd_peer_cert_file }}"
     csr_path: "{{ etcd_peer_cert_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_key_file }}"
     ownca_path: "{{ etcd_peer_trusted_ca_file }}"
     ownca_privatekey_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
-    provider: "ownca"
+    provider: ownca
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
@@ -309,7 +308,7 @@
       - "{{ etcd_peer_key_file }}"
       - "{{ etcd_peer_trusted_ca_file }}"
   args:
-    executable: "/bin/bash"
+    executable: /bin/bash
   when: inventory_hostname != ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   register: base64_encode_result
@@ -321,7 +320,7 @@
       set -euxo pipefail
       echo -n {{ base64_encode_result.stdout | quote }} | base64 -d | tar zx -C /
   args:
-    executable: "/bin/bash"
+    executable: /bin/bash
   when: inventory_hostname != ansible_play_hosts[0]
   register: base64_decode_result
   changed_when: base64_decode_result is not succeeded
@@ -346,8 +345,8 @@
 
 - name: systemctl start etcd.service
   ansible.builtin.service:
-    name: "etcd.service"
-    state: "started"
+    name: etcd.service
+    state: started
     enabled: true
   changed_when: false
   failed_when: false
