--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,4 @@
 ---
-
 # Copyright 2024 Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,7 +25,7 @@
       set -euxo pipefail
       rm -rf {{ etcd_data_dir }}
   args:
-    executable: "/bin/bash"
+    executable: /bin/bash
   loop: "{{ ansible_play_hosts }}"
   delegate_to: "{{ item }}"
   run_once: true
@@ -35,8 +34,8 @@
 
 - name: etcd | systemctl restart etcd.service
   ansible.builtin.service:
-    name: "etcd.service"
-    state: "restarted"
+    name: etcd.service
+    state: restarted
     enabled: true
   loop: "{{ ansible_play_hosts }}"
   delegate_to: "{{ item }}"
