--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,7 +17,7 @@
 galaxy_info:
   role_name: etcd
   namespace: alvistack
-  author: "Wong Hoi Sing Edison <hswong3i@pantarei-design.com>"
+  author: Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
   description: Ansible Role for etcd Installation
   company: PantaRei Design
   license: Apache-2.0
