--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,5 +1,4 @@
 ---
-
 # Copyright 2024 Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -42,7 +41,7 @@
             --key=/etc/etcd/pki/server.key \
             endpoint health
       args:
-        executable: "/bin/bash"
+        executable: /bin/bash
       when: inventory_hostname == groups['etcd'][0]
       register: result
       changed_when: result is not succeeded
@@ -58,7 +57,7 @@
             --key=/etc/etcd/pki/server.key \
             put foo bar
       args:
-        executable: "/bin/bash"
+        executable: /bin/bash
       when: inventory_hostname == groups['etcd'][0]
       register: result
       changed_when: result is not succeeded
@@ -74,7 +73,7 @@
             --key=/etc/etcd/pki/server.key \
             get foo
       args:
-        executable: "/bin/bash"
+        executable: /bin/bash
       register: result
       changed_when: result is not succeeded
       failed_when: "'bar' not in result.stdout"
