--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -17,15 +17,15 @@
 _etcd_release: "3.5"
 
 _apt_key:
-  - keyring: "/etc/apt/trusted.gpg.d/home_alvistack.gpg"
-    url: "http://downloadcontent.opensuse.org/repositories/home:/alvistack/Debian_Testing/Release.key"
-    id: "789CFFDE0295B8A1F4E5690C4BECC97550D0B1FD"
-    state: "present"
+  - keyring: /etc/apt/trusted.gpg.d/home_alvistack.gpg
+    url: http://downloadcontent.opensuse.org/repositories/home:/alvistack/Debian_Testing/Release.key
+    id: 789CFFDE0295B8A1F4E5690C4BECC97550D0B1FD
+    state: present
 
 _apt_repository:
-  - filename: "home:alvistack"
-    repo: "deb http://downloadcontent.opensuse.org/repositories/home:/alvistack/Debian_Testing/ /"
-    state: "present"
+  - filename: home:alvistack
+    repo: deb http://downloadcontent.opensuse.org/repositories/home:/alvistack/Debian_Testing/ /
+    state: present
 
 _apt:
-  - { state: "present", name: "etcd=100:{{ etcd_version }}*" }
+  - { state: present, name: "etcd=100:{{ etcd_version }}*" }
