--- a/vars/suse-15.5.yml
+++ b/vars/suse-15.5.yml
@@ -17,21 +17,21 @@
 _etcd_release: "3.5"
 
 _rpm_key:
-  - key: "http://downloadcontent.opensuse.org/repositories/home:/alvistack/openSUSE_Leap_15.5/repodata/repomd.xml.key"
-    fingerprint: "789CFFDE0295B8A1F4E5690C4BECC97550D0B1FD"
-    state: "present"
+  - key: http://downloadcontent.opensuse.org/repositories/home:/alvistack/openSUSE_Leap_15.5/repodata/repomd.xml.key
+    fingerprint: 789CFFDE0295B8A1F4E5690C4BECC97550D0B1FD
+    state: present
 
 _yum_repository:
-  - file: "home_alvistack"
-    name: "home_alvistack"
-    description: "home:alvistack (openSUSE_Leap_15.5)"
-    baseurl: "http://downloadcontent.opensuse.org/repositories/home:/alvistack/openSUSE_Leap_15.5"
+  - file: home_alvistack
+    name: home_alvistack
+    description: home:alvistack (openSUSE_Leap_15.5)
+    baseurl: http://downloadcontent.opensuse.org/repositories/home:/alvistack/openSUSE_Leap_15.5
     enabled: true
     priority: "2"
     module_hotfixes: true
     gpgcheck: true
-    gpgkey: "http://downloadcontent.opensuse.org/repositories/home:/alvistack/openSUSE_Leap_15.5/repodata/repomd.xml.key"
-    state: "present"
+    gpgkey: http://downloadcontent.opensuse.org/repositories/home:/alvistack/openSUSE_Leap_15.5/repodata/repomd.xml.key
+    state: present
 
 _zypper:
-  - { state: "present", name: "etcd-100:{{ etcd_version }}" }
+  - { state: present, name: "etcd-100:{{ etcd_version }}" }
